<resources>
    <string name="app_name">Flappy Crazy Bird</string>
    <string name="game_over">GAME OVER</string>
    <string name="best">BEST</string>

    <string name="restart">RESTART</string>
    <string name="records">records</string>
    <string name="flappy_crazy_bird" translatable="false">Flappy Crazy Bird</string>
    <string name="SHOP">shop</string>
    <string name="logout">logout</string>
    <string name="records_table">RECORDS TABLE</string>
    <string name="username">USERNAME</string>
    <string name="score">SCORE</string>


    <string name="user_name">user name</string>

    <string name="register">register</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="flappycrazybird" translatable="false">FlappyCrazyBird</string>
    <string name="signin">Signin</string>
    <string name="guest_mode">guest mode</string>
    <string name="back">BACK</string>
    <string name="attention">Attention!</string>
    <string name="are_you_sure_you_don_t_want_to_be_remembered">Are You Sure You Don\'t Want To Be Remembered?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="buy">BUY</string>
    <string name="select">SELECT</string>
    <string name="please_press_play_to_continue">Please press \'\'PLAY\'\' to continue</string>
    <string name="shop">SHOP</string>
    <string name="sorry">Sorry you don\'t have enough coins</string>
    <string name="isSelected">\" is selected\"</string>
    <string name="UserName_is_required">UserName is required!</string>
    <string name="Email_is_required">Email is required!</string>
    <string name="Password_is_required">Password is required!</string>
    <string name="Please_provide_valid_email">Please provide valid email!</string>
    <string name="length_password">Min password length should be 6 characters</string>
    <string name="registered_successfully">User has been registered successfully!</string>
    <string name="Failed_to_register">\"Failed to register! try again! \"</string>
    <string name="Failed_to_register_try_again">\"Failed to register! try again! \"</string>
    <string name="Fail_to_get_data">Fail to get data.</string>
</resources>