<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.flappybird.GameOverActivity">

    <LinearLayout
        android:id="@+id/linearLayoutFireAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/fireAnimation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/fire" />
    </LinearLayout>

    <RelativeLayout

        android:id="@+id/relative_1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/BestDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fonta"
                    android:textColor="@color/blue"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fonta"
                    android:text="@string/best"
                    android:textColor="@color/blue"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/scoreDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fonta"
                    android:textColor="@color/blue"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fonta"
                    android:text="@string/score"
                    android:textColor="@color/blue"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relative_2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/relative_1">

        <TextView
            android:id="@+id/gameOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/fonta"
            android:text="@string/game_over"
            android:textColor="@color/red"
            android:textSize="60sp"
            android:layout_margin="15dp"/>

        <android.widget.Button
            android:id="@+id/btnRestart"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/gameOver"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_gradient_style"
            android:fontFamily="@font/fonta"
            android:text="@string/restart"
            android:textColor="@color/blue"
            android:textSize="30sp" />

        <android.widget.Button
            android:id="@+id/btnRecords"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRestart"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_gradient_style"
            android:fontFamily="@font/fonta"
            android:text="@string/records"
            android:textColor="@color/red"
            android:textSize="30sp" />
    </RelativeLayout>

</RelativeLayout>